# bz-docker

./: .bazelrc  .gitignore  README.md  WORKSPACE
centos/: BUILD.bazel
debian/: BUILD.bazel
fedora/: BUILD.bazel
rocky/: BUILD.bazel
ubuntu/: BUILD.bazel
