load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit", "container_run_and_commit_layer")

container_run_and_commit_layer(
    name = "yum.repos.d",
    commands = [
        """rm -r /etc/yum.repos.d/*""",
    ],
    image = "@centos//image:image.tar",
)

container_layer(
    name = "etc",
    data_path = "etc",
    directory = "/etc",
    files = glob(["etc/**"]),
)

container_image(
    name = "fixed",
    base = "@centos//image:image.tar",
    layers = [
        ":yum.repos.d",
        ":etc",
    ],
)

container_run_and_commit_layer(
    name = "rpmbuild",
    commands = [
        """find /etc/yum.repos.d/""",
        """yum install -y /usr/bin/rpmbuild /usr/bin/python3 && yum clean all""",
    ],
    image = ":fixed.tar",
)

container_run_and_commit_layer(
    name = "user",
    commands = [
        """groupmod -g 101 users""",
    ],
    image = "@centos//image:image.tar",
)

container_image(
    name = "centos",
    base = "@centos//image:image.tar",
    layers = [
        ":yum.repos.d",
        ":etc",
        ":rpmbuild",
        ":user",
    ],
)
