load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")

container_run_and_commit_layer(
    name = "user",
    commands = [
        """groupmod -g 101 users""",
    ],
    image = "@rockylinux//image:image.tar",
)

container_run_and_commit_layer(
    name = "yum",
    commands = [
        """yum install -y /usr/bin/rpmbuild /usr/bin/python3 && yum clean all""",
    ],
    image = "@rockylinux//image:image.tar",
)

container_image(
    name = "rocky",
    base = "@rockylinux//image:image.tar",
    layers = [
        ":yum",
        ":user",
    ],
)
